objects/pse__VersionItem_Task__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a project task taken at the time the version is created.</description>
    <fields>
        <fullName>pse__Actual_End_Date_Time__c</fullName>
        <inlineHelpText>The actual end date and time for the task referenced in the version.</inlineHelpText>
        <label>Actual End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Hours__c</fullName>
        <inlineHelpText>The actual hours for the task referenced in the version.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Start_Date_Time__c</fullName>
        <label>Actual Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Resources__c</fullName>
        <inlineHelpText>The assigned resources for the task referenced in the version.</inlineHelpText>
        <label>Assigned Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The blocked status of project task referenced in the version.</description>
        <inlineHelpText>The blocked status of project task referenced in the version.</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The completed status of project task referenced in the version.</description>
        <inlineHelpText>The completed status of project task referenced in the version.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date_Time__c</fullName>
        <description>The end date and time for the task referenced in the version.</description>
        <inlineHelpText>The end date and time for the task referenced in the version.</inlineHelpText>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Hours__c</fullName>
        <description>The estimated hours for the task referenced in the version.</description>
        <inlineHelpText>The estimated hours for the task referenced in the version.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <description>The hierarchy depth for the task referenced in the version.</description>
        <inlineHelpText>The hierarchy depth for the task referenced in the version.</inlineHelpText>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hours_Remaining__c</fullName>
        <description>The hours remaining on the project task referenced in the version.</description>
        <inlineHelpText>The hours remaining on the project task referenced in the version.</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <description>Internal use only.</description>
        <inlineHelpText>Internal use only.</inlineHelpText>
        <label>Peer Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedById__c</fullName>
        <inlineHelpText>The created by user ID for the task referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedByName__c</fullName>
        <inlineHelpText>The created by user name for the task referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedDate__c</fullName>
        <description>The original created date for the task referenced in the version.</description>
        <inlineHelpText>The original created date for the task referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original ID of the task referenced in the version.</description>
        <inlineHelpText>The original ID of the task referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedById__c</fullName>
        <inlineHelpText>The modified by user ID for the task referenced in the assignment.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedByName__c</fullName>
        <inlineHelpText>The modified by user name for the task referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the task referenced in the version.</description>
        <inlineHelpText>The original last modified date of the task referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerId__c</fullName>
        <inlineHelpText>The owner ID for the task referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerName__c</fullName>
        <inlineHelpText>The owner name for the task referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ParentTaskId__c</fullName>
        <description>The parent task ID for the task referenced in the version.</description>
        <inlineHelpText>The parent task ID for the task referenced in the version.</inlineHelpText>
        <label>Parent Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ParentTaskName__c</fullName>
        <description>The parent task name for the task referenced in the version.</description>
        <inlineHelpText>The parent task name for the task referenced in the version.</inlineHelpText>
        <label>Parent Task Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Hours__c</fullName>
        <description>The percent complete hours on the project task referenced in the version.</description>
        <inlineHelpText>The percent complete hours on the project task referenced in the version.</inlineHelpText>
        <label>Percent Complete (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Points__c</fullName>
        <description>The points for the task referenced in the version.</description>
        <inlineHelpText>The points for the task referenced in the version.</inlineHelpText>
        <label>Points</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__ProjectTaskName__c</fullName>
        <description>The parent task name for the task referenced in the version.</description>
        <inlineHelpText>The parent task name for the task referenced in the version.</inlineHelpText>
        <label>Project Task Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date_Time__c</fullName>
        <description>The start date and time for the task referenced in the version.</description>
        <inlineHelpText>The start date and time for the task referenced in the version.</inlineHelpText>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status for the task referenced in the version.</description>
        <inlineHelpText>The status for the task referenced in the version.</inlineHelpText>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the task referenced in the version is a summary task.</description>
        <inlineHelpText>Indicates if the task referenced in the version is a summary task.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Key_Chain__c</fullName>
        <description>Delimited list of Task Keys in the project task hierarchy of the version.</description>
        <inlineHelpText>Delimited list of Task Keys in the project task hierarchy of the version.</inlineHelpText>
        <label>Task Key Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Number__c</fullName>
        <description>The task number for the task referenced in the version.</description>
        <inlineHelpText>The task number for the task referenced in the version.</inlineHelpText>
        <label>Task Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the Version.</description>
        <inlineHelpText>A lookup to the Version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Tasks</relationshipLabel>
        <relationshipName>VersionItem_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Task</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVT-{0000}</displayFormat>
        <label>Version Item Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>